# NeurobayesCppInterface

./: CMakeLists.txt  README.md  neurobayes.spec.in
cpp_interface/: NeuroBayesExpert.cc  NeuroBayesExpert.hh  NeuroBayesTeacher.cc  NeuroBayesTeacher.hh  nb_c_utils.h  nb_cpp_utils.cc  nb_cpp_utils.h  nb_param.hh  nb_param.hh.in
cpp_interface_tests/: crosstest.cc  interfacetest.cc  minimaltest.cc
